# SDToySocialNetwork

./: README.md
SDToySocialNetwork/: CMakeLists.txt  main.cpp
SDToySocialNetwork/Domain/: Friendship.cpp  Friendship.h  Message.cpp  Message.h  User.cpp  User.h
SDToySocialNetwork/Repository/: RepoFriendships.cpp  RepoFriendships.h  RepoMesage.cpp  RepoMesage.h  RepoUsers.cpp  RepoUsers.h
SDToySocialNetwork/Service/: Service.cpp  Service.h
SDToySocialNetwork/TAD/: ABC.h  ABCNode.h  List.h  OrderSet.h
SDToySocialNetwork/Tests/: TestAll.h  TestEntitati.cpp  TestEntitati.h  TestList.cpp  TestList.h  TestRepository.cpp  TestRepository.h
SDToySocialNetwork/UI/: UI.cpp  UI.h
